; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19282.c_cksum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19282.c_cksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @cksum(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i64*, i64** %3, align 8
  store i64* %7, i64** %6, align 8
  store i64 0, i64* %5, align 8
  br label %8

8:                                                ; preds = %17, %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp sgt i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load i64*, i64** %6, align 8
  %13 = getelementptr inbounds i64, i64* %12, i32 1
  store i64* %13, i64** %6, align 8
  %14 = load i64, i64* %12, align 8
  %15 = load i64, i64* %5, align 8
  %16 = add i64 %15, %14
  store i64 %16, i64* %5, align 8
  br label %17

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = sub nsw i32 %18, 2
  store i32 %19, i32* %4, align 4
  br label %8

20:                                               ; preds = %8
  %21 = load i64, i64* %5, align 8
  %22 = lshr i64 %21, 16
  %23 = load i64, i64* %5, align 8
  %24 = and i64 %23, 65535
  %25 = add i64 %22, %24
  store i64 %25, i64* %5, align 8
  %26 = load i64, i64* %5, align 8
  %27 = lshr i64 %26, 16
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, %27
  store i64 %29, i64* %5, align 8
  %30 = load i64, i64* %5, align 8
  %31 = xor i64 %30, -1
  ret i64 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
